2.2.5/_sources/gallery/lines_bars_and_markers/scatter_symbol.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_lines_bars_and_markers_scatter_symbol.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_bars_and_markers_scatter_symbol.py:


==============
Scatter Symbol
==============



.. image:: /gallery/lines_bars_and_markers/images/sphx_glr_scatter_symbol_001.png
    :class: sphx-glr-single-img






.. code-block:: default

    import matplotlib.pyplot as plt
    import numpy as np
    import matplotlib

    # Fixing random state for reproducibility
    np.random.seed(19680801)


    x = np.arange(0.0, 50.0, 2.0)
    y = x ** 1.3 + np.random.rand(*x.shape) * 30.0
    s = np.random.rand(*x.shape) * 800 + 500

    plt.scatter(x, y, s, c="g", alpha=0.5, marker=r'$\clubsuit$',
                label="Luck")
    plt.xlabel("Leprechauns")
    plt.ylabel("Gold")
    plt.legend(loc=2)
    plt.show()


.. _sphx_glr_download_gallery_lines_bars_and_markers_scatter_symbol.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: scatter_symbol.py <scatter_symbol.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: scatter_symbol.ipynb <scatter_symbol.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
